@@ -10,6 +10,7 @@ Changes in 2.8.27
 - Order Report Cards by Course title in ReportCards.fnc.php
 - Fix SQL error when more than 1 Attendance Period Teacher in Export.php
 - Fix typo in INSTALL instructions + update instructions for Ubuntu 14.04
+- Fix Custom User Permissions: remove default program in Exceptions.php
 
 Changes in 2.8.26
 -----------------
